feat(product): download file api
